--- a/Data Analysis with Python/House_Sales_in_King_Count_USA.ipynb
+++ b/Data Analysis with Python/House_Sales_in_King_Count_USA.ipynb
@@ -1151,7 +1151,7 @@
     }
    ],
    "source": [
-    "#df.drop(columns=['Unnamed: 0',\"id\"], inplace=True)\n",
+    "df.drop(columns=['Unnamed: 0',\"id\"], inplace=True)\n",
     "df.describe()"
    ]
   },
